--- a/style/about.css
+++ b/style/about.css
@@ -9,7 +9,7 @@
     width: 100%;
 }
 
-#hello-world{
+#welcome-section{
     background: beige; 
     height: 20vh;
     width: 100%;
@@ -18,7 +18,7 @@
     padding: 300px 0;
 }
 
-.background-container{
+.welcome-container{
     height: 100;
     width: 100vw;
     max-width:100%;
