--- a/style/contact.css
+++ b/style/contact.css
@@ -12,6 +12,9 @@
 #contact-section{
     background: beige; 
     font-style: italic;
+    font-size: 25px;
+    position: absolute;
+    top: 50px;
     height: 20vh;
     width: 100%;
     max-width:100%;
