--- a/style/projects.css
+++ b/style/projects.css
@@ -11,17 +11,23 @@
 
 #projects-section{
     background: beige; 
-    height: 20vh;
+    /* height: 20vh; */
+    height: 100%;
     width: 100%;
     max-width:100%;
     text-align: center;
     padding: 300px 0;
+    background-size: 100% auto;
 }
 
 .projects-container{
-    height: 100;
+    height: 100%;
     width: 100vw;
     max-width:100%;
+}
+
+th, td{
+    padding: 100px;
 }
 
 li {
@@ -48,12 +54,12 @@ li a:hover {
 html {
     margin: 0px;
     min-height: 100%;
+    
  }
  
  body {
     margin: 0px;
     min-height: 100%;
-    background-size: cover;
  }
 
 /* @media (max-width: 1000px){ 
