--- a/style/contact.css
+++ b/style/contact.css
@@ -13,6 +13,7 @@
     background: beige; 
     font-style: italic;
     font-size: 25px;
+    vertical-align: top;
     height: 20vh;
     width: 100%;
     max-width:100%;
@@ -62,4 +63,3 @@ html {
     #welcome-section{
         background-color: red;
     } */
-}
