--- a/style/index.css
+++ b/style/index.css
@@ -9,17 +9,34 @@
     width: 100%;
 }
 
-#hello-world{
-    background: beige; 
-    /* height: 20vh; */
-    height: 100%;
+#text{
+    height: 20vh;
     width: 100%;
     max-width:100%;
-    text-align: center;
-    font-size:50px;
+    font-size:35px;
     font-family: 'B612 Mono', monospace;
-    padding: 300px 0;
+    padding: 200px 0px;
     background-size: 100% 100%;
+}
+
+#portrait{
+    text-align: left;
+    float: left;
+    border-radius: 8px;
+    max-width: 50%;
+    padding-left: 150px;
+}
+
+#hello-world{
+    text-align: center;
+    font-size:35px;
+    padding-right: 100px;
+}
+
+#changing-text{
+    text-align: center;
+    font-size:35px;
+    padding-right: 100px;
 }
 
 .background-container{
@@ -49,6 +66,11 @@ li a:hover {
     background-color: beige;
 }
 
+img{
+    border-radius: 50%;
+    border: 10px solid khaki;
+}
+
 html {
     margin: 0px;
     min-height: 100%;
@@ -57,10 +79,10 @@ html {
  body {
     margin: 0px;
     min-height: 100%;
+    background-color: beige; 
  }
 
 /* @media (max-width: 1000px){ 
     #welcome-section{
         background-color: red;
     } */
-}
