UPDATED About Page

--- a/style/about.css
+++ b/style/about.css
@@ -10,12 +10,11 @@
 }
 
 #about-section{
-    background: beige; 
     height: 20vh;
     width: 100%;
     max-width:100%;
     /* text-align: center; */
-    padding: 300px 0;
+    padding: 50px 0;
 }
 
 .about-container{
@@ -54,10 +53,14 @@ html {
     margin: 0px;
     min-height: 100%;
     background-size: cover;
+    background-color: beige; 
  }
 
 /* @media (max-width: 1000px){ 
     #welcome-section{
         background-color: red;
     } */
+
+h1, h2, p {
+    display: inline;
 }
